# RigidBodyLight

./: .gitignore  __init__.py  c_rigid_obj.cpp  environment.yml  job-build.sh  pyproject.toml
.github/workflows/: conda.yaml
recipe/: build_env.yaml  meta.yaml
src/: Rigid.py  c_rigid_obj.cpp
tests/: test_apply.py  test_interface.py  test_precision.py  test_wall.py  utils.py
