[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "nanobind>=2.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "RigidBodyLight"
version = "0.3.0"
description = "Rigid body simulation with nanobind"
requires-python = ">=3.8"

[tool.scikit-build.cmake.define]
DOUBLEPRECISION = "0"
